Fix alignment of narrow-media-width nav tabs

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -967,7 +967,7 @@ input[type="email"] {
 
    nav ul {
      list-style: none;
-     margin: 1.25rem 0 0 0;
+     margin: .5rem 0 0 0;
      padding: 0;
      text-align: left;
    }
